# server/controllers/inventory_controller.py
@@ -1,26 +1,8 @@
 import connexion
 import six
 
-from server.models.lot_info import LotInfo  # noqa: E501
-from server.models.part_info import PartInfo  # noqa: E501
-from server.models.database import Database
+from server.models.inventory_info import InventoryInfo  # noqa: E501
 from server import util
-
-database_object = Database(host='10.10.4.61', user='root', password='adminpwd', db='WorkOrder', charset='utf8mb4')
-
-def add_ln(body):  # noqa: E501
-    """Add a new lot number to a part number
-
-     # noqa: E501
-
-    :param body: Pet object that needs to be added to the store
-    :type body: dict | bytes
-
-    :rtype: None
-    """
-    if connexion.request.is_json:
-        body = LotInfo.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
 
 
 def add_pn(body):  # noqa: E501
@@ -34,7 +16,7 @@ def add_pn(body):  # noqa: E501
     :rtype: None
     """
     if connexion.request.is_json:
-        body = PartInfo.from_dict(connexion.request.get_json())  # noqa: E501
+        body = InventoryInfo.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
@@ -44,9 +26,8 @@ def get_inv():  # noqa: E501
      # noqa: E501
 
 
-    :rtype: None
+    :rtype: List[InventoryInfo]
     """
-    database_object.open_connection()
     return 'do some magic!'
 
 
@@ -58,7 +39,7 @@ def get_ln(lot_number):  # noqa: E501
     :param lot_number: This is the input for getting lot number
     :type lot_number: str
 
-    :rtype: None
+    :rtype: InventoryInfo
     """
     return 'do some magic!'
 
@@ -71,23 +52,8 @@ def get_pn(part_number):  # noqa: E501
     :param part_number: This is the input
     :type part_number: str
 
-    :rtype: None
+    :rtype: List[InventoryInfo]
     """
-    return 'do some magic!'
-
-
-def update_ln(body):  # noqa: E501
-    """Update an item
-
-     # noqa: E501
-
-    :param body: Pet object that needs to be added to the store
-    :type body: dict | bytes
-
-    :rtype: None
-    """
-    if connexion.request.is_json:
-        body = LotInfo.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
@@ -102,5 +68,5 @@ def update_pn(body):  # noqa: E501
     :rtype: None
     """
     if connexion.request.is_json:
-        body = PartInfo.from_dict(connexion.request.get_json())  # noqa: E501
+        body = InventoryInfo.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
