# server/models/__init__.py
@@ -3,5 +3,4 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from server.models.lot_info import LotInfo
-from server.models.part_info import PartInfo
+from server.models.inventory_info import InventoryInfo
