# server/models/lot_info.py
@@ -1,114 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from server.models.base_model_ import Model
-from server import util
-
-
-class LotInfo(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self, lot_number: str=None, part_number: str=None, quantity: int=None):  # noqa: E501
-        """LotInfo - a model defined in Swagger
-
-        :param lot_number: The lot_number of this LotInfo.  # noqa: E501
-        :type lot_number: str
-        :param part_number: The part_number of this LotInfo.  # noqa: E501
-        :type part_number: str
-        :param quantity: The quantity of this LotInfo.  # noqa: E501
-        :type quantity: int
-        """
-        self.swagger_types = {
-            'lot_number': str,
-            'part_number': str,
-            'quantity': int
-        }
-
-        self.attribute_map = {
-            'lot_number': 'lot_number',
-            'part_number': 'part_number',
-            'quantity': 'quantity'
-        }
-        self._lot_number = lot_number
-        self._part_number = part_number
-        self._quantity = quantity
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'LotInfo':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The lot_info of this LotInfo.  # noqa: E501
-        :rtype: LotInfo
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def lot_number(self) -> str:
-        """Gets the lot_number of this LotInfo.
-
-
-        :return: The lot_number of this LotInfo.
-        :rtype: str
-        """
-        return self._lot_number
-
-    @lot_number.setter
-    def lot_number(self, lot_number: str):
-        """Sets the lot_number of this LotInfo.
-
-
-        :param lot_number: The lot_number of this LotInfo.
-        :type lot_number: str
-        """
-
-        self._lot_number = lot_number
-
-    @property
-    def part_number(self) -> str:
-        """Gets the part_number of this LotInfo.
-
-
-        :return: The part_number of this LotInfo.
-        :rtype: str
-        """
-        return self._part_number
-
-    @part_number.setter
-    def part_number(self, part_number: str):
-        """Sets the part_number of this LotInfo.
-
-
-        :param part_number: The part_number of this LotInfo.
-        :type part_number: str
-        """
-
-        self._part_number = part_number
-
-    @property
-    def quantity(self) -> int:
-        """Gets the quantity of this LotInfo.
-
-
-        :return: The quantity of this LotInfo.
-        :rtype: int
-        """
-        return self._quantity
-
-    @quantity.setter
-    def quantity(self, quantity: int):
-        """Sets the quantity of this LotInfo.
-
-
-        :param quantity: The quantity of this LotInfo.
-        :type quantity: int
-        """
-
-        self._quantity = quantity
